# grocery_swiper

./: .gitignore  README.md  about_me.ipynb  main.py  pyproject.toml  requirements_processing.txt  requirements_scrape.py  scrape.ipynb
.github/workflows/: processing.yml  scrape.yml
data/csv/: products_2025-10-25.csv
data/csv/processed/: products_2025-10-18.csv  products_2025-10-25.csv
data/csv/raw/: products_2025-10-18.csv  products_2025-10-25.csv
scripts/: about_me.ipynb  processing.py  recommender.ipynb  scrape.ipynb  scrape.py
