[project]
name = "grocery-swiper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "bs4>=0.0.2",
    "ipykernel>=6.30.1",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
